<resources>
    <string name="app_name">eWalle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="version_app">Version 2.0.1</string>
    <string name="menu_logout">Logout</string>
    <string name="home_overview">Account Overview</string>
    <string name="current_balance">Current balance</string>
    <string name="home_send_money">Send Money</string>
    <string name="home_services">Services</string>
    <string name="login_text">Open An Account For Digital E-Wallet Solutions.Instant Payouts. \n\n Join For Free.</string>
    <string name="login_sign">Sign in ➞</string>
    <string name="login_create_account">Create an account</string>
    <string name="toast_add_users">Add Users</string>
    <string name="roast_add">AddBalance</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="error_title">Error!</string>
    <string name="error_mesege">No data came. Retry request?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>