<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group_nav"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_accounts"
            android:title="@string/menu_accounts" />

        <item
            android:id="@+id/nav_transactions"
            android:title="@string/menu_transaction" />

        <item
            android:id="@+id/nav_starts"
            android:title="@string/menu_stats" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />
    </group>
</menu>