<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_fragment"
    tools:context=".presentation.login.LoginFragment">

    <ImageView
        android:id="@+id/loginImageLeftLong"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/image_left_side"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/loginShimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/loginTextDate"
        app:layout_constraintEnd_toStartOf="@+id/loginContentEnd"
        app:layout_constraintStart_toStartOf="@+id/loginContentStart">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="29dp"
            android:textColor="@color/text_one"
            android:textSize="25sp"
            android:text="00:00 AM" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end|top"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="51dp"
            android:background="@color/home_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="10dp"
            android:text="00°С"
            android:textColor="@color/text_one"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginTop="10dp"
            android:text="load.00.0000 | Load"
            android:textColor="@color/text_two"
            app:layout_constrainedWidth="true" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginContentStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="166dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginContentEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="27dp" />

    <TextView
        android:id="@+id/loginTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:textColor="@color/text_one"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/loginVectorWeather"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/loginContentStart"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="06:20 PM" />

    <ImageView
        android:id="@+id/loginVectorWeather"
        android:layout_width="20dp"
        android:layout_height="20dp"
        tools:src="@drawable/ic_login_cloud" />

    <TextView
        android:id="@+id/loginTextCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_one"
        android:textSize="14sp"
        tools:text="34°С" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/loginWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        app:constraint_referenced_ids="loginVectorWeather,loginTextCelsius"
        app:flow_horizontalGap="10dp"
        app:flow_horizontalStyle="packed"
        app:layout_constraintBottom_toBottomOf="@+id/loginTextTime"
        app:layout_constraintEnd_toStartOf="@+id/loginContentEnd"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/loginTextTime"
        app:layout_constraintTop_toTopOf="@+id/loginTextTime" />

    <TextView
        android:id="@+id/loginTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_two"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/loginContentEnd"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/loginContentStart"
        app:layout_constraintTop_toBottomOf="@+id/loginTextTime"
        tools:text="Nov.10.2020 | Wednesday" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/loginDateBottomBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="loginTextTime,loginWeather, loginTextDate" />

    <Button
        android:id="@+id/loginTextCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        android:text="@string/login_create_account"
        android:textAllCaps="false"
        android:textColor="@color/text_one"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginContentEnd"
        app:layout_constraintStart_toStartOf="@+id/loginContentStart" />

    <android.widget.Button
        android:id="@+id/loginButtonEntrance"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/custom_button"
        android:text="@string/login_sign"
        android:textAllCaps="false"
        android:textColor="@color/text_btn"
        android:textSize="17sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/loginTextCreateAccount"
        app:layout_constraintEnd_toStartOf="@+id/loginContentEnd"
        app:layout_constraintStart_toStartOf="@+id/loginContentStart" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/loginButtonTopBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="loginTextCreateAccount, loginButtonEntrance" />

    <ImageView
        android:id="@+id/loginImageLogo"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:layout_marginBottom="17dp"
        android:src="@drawable/image_logo"
        app:layout_constraintBottom_toTopOf="@+id/loginTextNameApp"
        app:layout_constraintStart_toStartOf="@+id/loginContentStart"
        app:layout_constraintTop_toTopOf="@id/loginDateBottomBarrier"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/loginTextNameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/text_one"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginTextView"
        app:layout_constraintStart_toStartOf="@+id/loginContentStart"
        app:layout_constraintTop_toBottomOf="@+id/loginImageLogo" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/login_text"
        android:textColor="@color/text_two"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/loginButtonTopBarrier"
        app:layout_constraintEnd_toStartOf="@id/loginContentEnd"
        app:layout_constraintStart_toStartOf="@+id/loginContentStart"
        app:layout_constraintTop_toBottomOf="@+id/loginTextNameApp" />
</androidx.constraintlayout.widget.ConstraintLayout>